<resources>
    <string name="app_name">Clothing App</string>
    <string name="women">Women</string>
    <string name="men">Men</string>
    <string name="kids">Kids</string>
    <string name="bags">bags</string>
    <string name="watches">watches</string>
    <string name="books">books</string>
    <string name="formal_wear">formal wear</string>
    <string name="sports_wear">sports wear</string>
    <string name="shoes">shoes</string>
    <string name="casual_wear">casual wear</string>
    <string name="party_wear">party wear</string>
    <string name="logo_description">The Cloth logo</string>
    <string name="menu_search">Search</string>
    <string name="bottom_nav_categories">Categories</string>
    <string name="bottom_nav_account">Account</string>
    <string name="search_products_hint">Search for clothes</string>
    <string name="category_mens">Mens</string>
    <string name="search_for_products">Search for clothing...</string>
    <string name="app_name_store">Luxe Lounge</string>
    <string name="menu_cart">Cart</string>
    <string name="cart_description">Go to cart</string>
    <string name="account_description">Go to user account</string>
    <string name="menu_account">Account</string>
    <string name="catogories">Catogories</string>
</resources>