<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPageActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="205dp"
        android:layout_height="0dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="83dp"
        app:layout_constraintBottom_toTopOf="@+id/btWomen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/btWomen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/women"
        app:layout_constraintBottom_toTopOf="@+id/btMen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btMen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="26dp"
        android:text="@string/men"
        app:layout_constraintBottom_toTopOf="@+id/btKids"
        app:layout_constraintStart_toStartOf="@+id/btWomen"
        app:layout_constraintTop_toBottomOf="@+id/btWomen" />

    <Button
        android:id="@+id/btKids"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="176dp"
        android:text="@string/kids"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btMen"
        app:layout_constraintTop_toBottomOf="@+id/btMen" />
</androidx.constraintlayout.widget.ConstraintLayout>